1. add header include for memory 2. change JDK version to 1.8